pointer on collapsed issues
/cc @searls

--- a/app/styles/details/_pull_request.scss
+++ b/app/styles/details/_pull_request.scss
@@ -62,6 +62,7 @@
   line-height: 36px;
   vertical-align: middle;
   position: relative;
+  cursor: pointer;
 
   time {
     float: right;
